[gd_scene load_steps=2 format=3 uid="uid://dyey8j5lptxf7"]

[ext_resource type="Script" uid="uid://11u1efn4i2hk" path="res://Graphic Elements/TabContainer/tab_button.gd" id="1_kjuop"]

[node name="TabButton" type="PanelContainer"]
visible = false
offset_right = 95.0
offset_bottom = 23.0
mouse_force_pass_scroll_events = false
script = ExtResource("1_kjuop")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
text = "Sample Text"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
